--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,8 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<scope>runtime</scope>
+			<version>13.2.0.jre11</version>
+			<scope>compile</scope>
 		</dependency>
 
 
