expose actuator and add metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=broadcom_db;e
 spring.datasource.username=sa
 spring.datasource.password=Password@123
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#Expose all endpoints
+ management.endpoints.web.exposure.include=*
